--- a/templates/forecast.html
+++ b/templates/forecast.html
@@ -1,15 +1,15 @@
 <div class="container-fluid header text-center">
  <h3>Weather Forecast App</h3>
- <a href ="#/forecast" type="button" class="btn btn-danger pull-right">forecast</a>
 </div>
 
-<div class="row" ng-controller="HomeController as hm">
+<div class="row" ng-controller="ForecastController as hm">
  <div class="col-md-6 col-md-offset-3">
    <h4>Weather by City</h4>
    <div class="form-group">
      <input type="text" class="form-control" ng-model="hm.cityName"/>
    </div>
-   <a class="btn btn-primary" ng-click="hm.getCityTemperature()">Get Info</a>
+   <a href ="#/forecast" class="btn btn-danger" role="button" ng-click="hm.getCityForecast()">Click for Forecast</a>
+
    <h3 id="textInfo"></h3>
  </div>
  <div class="col-md-6 col-md-offset-3" id="result">
@@ -23,11 +23,11 @@
        </tr>
      </thead>
      <tbody>
-     <tr>
-       <th>{{hm.weatherResponse.dt}}</th>
-       <th>{{hm.weatherResponse.main.temp-273}} &#8451;</th>
-       <th>{{hm.weatherResponse.main.humidity}}</th>
-       <th>{{hm.weatherResponse.weather[0].description}}</th>
+     <tr ng-repeat="n in hm.forecastResponse.list">
+       <th>{{n.dt}}</th>
+       <th>{{n.main.temp-273}} &#8451;</th>
+       <th>{{n.main.humidity}}</th>
+       <th>{{n.weather[0].description}}</th>
      </tr>
      </tbody>
    </table>
