--- a/app.css
+++ b/app.css
@@ -1,5 +1,21 @@
-.header{
+/*.header{
 	height: 10vh;
 	background-color: #CCF9DF;
 	font-size:2vh;
 }
+*/
+h3{
+	margin-left: 17em;
+}
+
+#img{
+	background-image: url(weather.jpg);
+	background-size: cover;
+	background-position: center;
+	height: 100vh;
+	background-attachment: fixed;
+}
+/*
+body{
+	color: whitesmoke;
+}*/
