--- a/templates/current.html
+++ b/templates/current.html
@@ -1,6 +1,5 @@
-<div class="container-fluid header text-center">
- <h3>Weather Forecast App</h3>
- <a href ="#/forecast" type="button" class="btn btn-danger pull-right">forecast</a>
+<div class="container">
+ <h3>Weather Forecast</h3>
 </div>
 
 <div class="row" ng-controller="HomeController as hm">
@@ -9,7 +8,8 @@
    <div class="form-group">
      <input type="text" class="form-control" ng-model="hm.cityName"/>
    </div>
-   <a class="btn btn-primary" ng-click="hm.getCityTemperature()">Get Info</a>
+   <a class="btn btn-primary" ng-click="hm.getCityTemperature()">current</a>
+ <a href ="#/forecast" type="button" class="btn btn-danger ">click for forecast</a>
    <h3 id="textInfo"></h3>
  </div>
  <div class="col-md-6 col-md-offset-3" id="result">
@@ -24,7 +24,7 @@
      </thead>
      <tbody>
      <tr>
-       <th>{{hm.weatherResponse.dt}}</th>
+       <th>{{hm.weatherResponse.dt*1000 | date : 'MMMM dd '}}</th>
        <th>{{hm.weatherResponse.main.temp-273}} &#8451;</th>
        <th>{{hm.weatherResponse.main.humidity}}</th>
        <th>{{hm.weatherResponse.weather[0].description}}</th>
