--- a/templates/forecast.html
+++ b/templates/forecast.html
@@ -1,5 +1,5 @@
-<div class="container-fluid header text-center">
- <h3>Weather Forecast App</h3>
+<div class="container">
+ <h3>Weather Forecast</h3>
 </div>
 
 <div class="row" ng-controller="ForecastController as hm">
@@ -8,9 +8,9 @@
    <div class="form-group">
      <input type="text" class="form-control" ng-model="hm.cityName"/>
    </div>
-   <a href ="#/forecast" class="btn btn-danger" role="button" ng-click="hm.getCityForecast()">Click for Forecast</a>
+   <a href ="#/forecast" class="btn btn-danger" role="button" ng-click="hm.getCityForecast()">forecast</a>
 
-   <h3 id="textInfo"></h3>
+     <h3 id="textInfo"></h3>
  </div>
  <div class="col-md-6 col-md-offset-3" id="result">
    <table class="table table-striped table-hover ">
@@ -24,7 +24,7 @@
      </thead>
      <tbody>
      <tr ng-repeat="n in hm.forecastResponse.list">
-       <th>{{n.dt}}</th>
+       <th>{{n.dt*1000 | date : 'MMMM dd '}}</th>
        <th>{{n.main.temp-273}} &#8451;</th>
        <th>{{n.main.humidity}}</th>
        <th>{{n.weather[0].description}}</th>
